# auctions

./: .gitignore  Cargo.toml  README.md  db.py  lloydsonline.py  requirements.txt  spicepod.yaml
.github/actions/build-auctions-sync/: action.yml
.github/workflows/: auctions-sync-hourly.yml
src/: cli.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  scraper.rs
