[package]
name        = "auctions"
version     = "0.1.0"
edition     = "2024"
description = "Scrape lloydsonline.com.au auction data and write to a database via ADBC"

[[bin]]
name = "auctions"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# HTTP
reqwest = { version = "0.12", features = ["blocking"] }

# HTML parsing
scraper = "0.22"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
snafu = "0.8"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# ADBC
adbc_core           = "0.22"
adbc_driver_manager = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
